<resources>
    <string name="app_name">RupiahSuper KSP</string>
    <string name="platform">RupiahSuper</string>
    <string name="my_collect">Collect</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">Night mode</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="login_in">Login</string>
    <string name="action_search">Search</string>
    <string name="useful_sites">Useful Sites</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="no_account">No account, Register</string>
    <string name="login_success">login success</string>
    <string name="login_fail">Pemuatan data gagal,klik untuk pemuatan ulang</string>
    <string name="logout_fail">logout fail</string>
    <string name="enter_password_again">enter password again</string>
    <string name="have_account">Have account, Login</string>
    <string name="username_not_empty">User name cannot be empty</string>
    <string name="password_not_empty">Password cannot be empty</string>
    <string name="re_password_not_empty">Confirmation password cannot be empty</string>
    <string name="twice_password_not_same">The passwords entered twice are different</string>
    <string name="register_success">register success</string>
    <string name="register_fail">register fail</string>
    <string name="logging_in">Logging…</string>
    <string name="logging_out">Logout…</string>
    <string name="registering">Registering…</string>
    <string name="login_first">Please login first</string>
    <string name="load_pager">借款</string>
    <string name="home_pager">首页</string>
    <string name="my_pager">我的</string>
    <string name="collect">Collect</string>
    <string name="http_error">network anomaly</string>
    <string name="double_click_exit_toast">Press the back button again to exit</string>
    <string name="loading">Loading</string>
    <string name="failed_to_get_project_data">Failed to get project data</string>
    <string name="in_the_process">In the process of development, please look forward to it.</string>
    <string name="share">Share</string>
    <string name="open_it_with_browser">Open it with the system browser</string>
    <string name="scale_down_show_behavior" translatable="false">com.project.movice.widget.behavior.ScaleDownShowBehavior</string>
    <string name="user_name_rules">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM&#160;</string>
    <string name="digits_mobile">1234567890+</string>
    <string name="digits_ktp">1234567890</string>
    <string name="digits_bank_card_number">1234567890</string>
    <string name="jiemoney">Pinjaman</string>
    <string name="touzi">Penanaman</string>
    <string name="wode">AKUN</string>
    <string name="shushou">RupiahSuper Bantuan</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="back">Kembali</string>
    <string name="save">Selesai</string>
    <string name="confirm">Yakin</string>
    <string name="cancel">Batal</string>
    <string name="facebook_login">Facebook login akun </string>
    <string name="facebook_login_erroor">Facebook gagal login </string>
    <string name="input_phone">Nomor ponsel</string>
    <string name="input_verification_code">Masukkan kode verifikasi</string>
    <string name="get_verification_code">Dapatkan kode</string>
    <string name="please_input_verification_code">Masukkan kode verifikasi dengan 6 angka</string>
    <string name="once_again_to_get">%1$ds kirim ulang</string>
    <string name="register_agreement">Dengan mendaftar berarti Anda setujui perjanjian pendaftaran RupiahSuper </string>
    <string name="select_borrowing_money">Scope kredit yang dapatanda</string>
    <string name="select_borrowing_purpose">Tujuan pinjaman</string>
    <string name="please_select_borrowing_purpose">Silahkan pilih tujuan pinjaman!</string>
    <string name="select_borrowing_term">Silakan pilih waktu peminjaman \n yang rill anda butuhkan</string>
    <string name="borrowing_money">Rp&#160;%1$s</string>
    <string name="app_name_title">RupiahSuper</string>
    <string name="amount_due">Jumlah pembayaran jatuh tempo</string>
    <string name="borrowing_immediately">Pinjam sekarang</string>
    <string name="we_will_provide_it_for_you_debt_service">Harap bayar tepat waktu, kami akan memberikan jumlah yang lebih tinggi dan layanan yang cepat dan andal.</string>
    <string name="warm_prompt">Promt hangat：</string>
    <string name="brrow_apply">Aplikasi pinjaman</string>
    <string name="improve_data_tips">Semakin lengkap data, semakin besar tingkat keberhasilan</string>
    <string name="progress_of_information_improvement">Integritas data</string>
    <string name="personal_basic_information">Informasi pribadi</string>
    <string name="loan_contract">Kontrak pinjaman</string>
    <string name="loan_details">Rincian</string>
    <string name="confirmation_of_loan_contract">Konfirmasi perjanjian pinjaman</string>
    <string name="job_information">Informasi perkerjaan</string>
    <string name="contact_information">Informasi kontak</string>
    <string name="upload_other_documents">Upload foto (opsional)</string>
    <string name="bank_card_information">Informasi kartu bank</string>
    <string name="please_have_a_live_certification">Verifikasi video </string>
    <string name="confirm_information_real_and_effective"> Saya menjamin informasinya sudah benar</string>
    <string name="next_step">Selanjutnya</string>
    <string name="name">Nama lengkap</string>
    <string name="select_name">Nama lengkap</string>
    <string name="ktp_number">Nomor KTP</string>
    <string name="select_ktp_number">Nomor KTP</string>
    <string name="ktp_inconformity">Format KTP salah</string>
    <string name="ktp_photo">Foto KTP</string>
    <string name="select_ktp_photo">Foto KTP</string>
    <string name="are_recognized_title">Agar diverifikasi dengan cepat dan tepat:</string>
    <string name="ktp_photos_condition">1.Konfirmasi KTP Anda sudah dikeluarkan dari dompet\n2.Diletakkan di tempat datar\n3.Tembak video di tempat terang</string>
    <string name="start_taking_photos">Mulai ambil foto</string>
    <string name="face_recording">Mulai rekaman</string>
    <string name="please_photograph_your_work_card">Mohon fotokan anda depan meja kerja, mohon foto anda yang sedang pada tempat kerja:</string>
    <string name="shooting_the_worker_hint_content">Mohon foto dengan pakai ID CARD kerja dan berada di lokasi kerja\n Foto yang jelas akan sangat membantu team verifikasi mensubmitkan pengajuan andan , semakin mempercepat pencairan dana anda.</string>
    <string name="shooting_the_lohnsteuerkarte_hint_content">1.Konfirmasi Kartu NPWP Anda sudah dikeluarkan dari dompet\n2.Diletakkan di tempat datar\n3.Tembak video di tempat terang</string>
    <string name="shooting_the_social_security_card_hint_content">1.Konfirmasi Kartu BPJS Anda sudah dikeluarkan dari dompet\n2.Diletakkan di tempat datar\n3.Tembak video di tempat terang</string>
    <string name="shooting_the_payroll_card_hint_content">1.Silahkan upload slip gaji bulan %1$s atau bulan %2$s\n2.Foto di tempat terang dan diletakkan di tempat datar\n3.Pastikan foto jelas dan tidak buram</string>
    <string name="face_authentication_title">Selanjutnya kami akan menyelesaikan verifikasi Anda：</string>
    <string name="face_authentication_content">Dalam memproses ini anda perlu membaca teks yang di prompt</string>
    <string name="solemn_promise">Tentang Nilai Kredit RupiahSuper</string>
    <string name="guarantee_payment_on_time">Perhatian: Kelakuan kepatuhan ketentuan akan meningkat kredit Anda, agar menikmati pinjaman yang lebih besar dengan suku bunga yang rendah. Penolakan untuk melunasi akan diajukan ke pusat kredit dan akan menyebabkan Anda tidak dapat menggunakan aplikasi online yang lain.</string>
    <string name="you_also_have_outstanding_loans">Pinjaman Anda masih belum dilunasi，untuk sementara ini tidak dapat mengajukan permohonan pinjaman lagi。Lunasi pinjaman dengan tepat waktu supaya mendapat pinjaman yang lebih besar！</string>
    <string name="sex">Jenis kelamin</string>
    <string name="select_sex">Jenis kelamin</string>
    <string name="date_of_birth">Tanggal lahir</string>
    <string name="select_date_of_birth">Tanggal lahir</string>
    <string name="marital_status">Status pernikahan</string>
    <string name="select_marital_status">Status pernikahan</string>
    <string name="home_address">Alamat rumah</string>
    <string name="home_detailed_address">Alamat rumah yang detail</string>
    <string name="select_home_address">Alamat rumah</string>
    <string name="please_enter_your_company_detailed_home_address">Alamat rumah yang detail</string>
    <string name="please_select">Silahkan Pilih</string>
    <string name="reselect">Foto ulang</string>
    <string name="contact_and_your_relationship">Hubungan kontak</string>
    <string name="please_select_a_direct_relative">Hubungan kontak</string>
    <string name="please_enter_the_name_of_the_contact">Nama lengkap</string>
    <string name="please_enter_the_contact_phone_number">Nomor ponsel</string>
    <string name="phone_number">Nomor ponsel</string>
    <string name="email">Email</string>
    <string name="please_enter_email">Email</string>
    <string name="whatsapp">Akun WhatsApp</string>
    <string name="repayment_successful">Pelunasan pinjaman berhasil</string>
    <string name="like_the_repayment_was_successful">Selamat, Anda sudah berhasil malakukan pembayaran dan bisa mengajukan lagi permohonan pinjaman dengan lebih cepat.</string>
    <string name="maintaining_repayment_habits">Mohon melanjutkan kebiasaan pelunasan pinjaman dengan baik baik, agar nilai kredit Anda dapat ditambah terus dan bisa menikmati pinjaman lebih besar dengan  bunga yg lebih kecil.</string>
    <string name="auditing_feedback">Umpan balik verifikasi</string>
    <string name="the_information_is_not_approved">Maaf，data permohonan Anda\ntidak dapat lolos verifikasi</string>
    <string name="i_see">Baik，saya mengerti</string>
    <string name="waiting_for_payment">Menunggu pembayaran</string>
    <string name="repayment_to_the_following_designated_account">Transfer ke</string>
    <string name="dynamic_virtual_card_number">Virtual account</string>
    <string name="repayment_amount1">Jumlah pembayaran：</string>
    <string name="the_amount_is_in_doubt">Ada pertanyaan?</string>
    <string name="reimbursement_deadline">Menyelesaikan pembayaran di tanggal %1$s</string>
    <string name="virtual_account_valid_until">Akun virtual akan nonaktif pada %1$s, jika tidak dapat melakukan pelunasan sebelum waktu tersebut, silahkan meminta akun virtual yang baru.</string>
    <string name="repayment_assistance1">Mohon melakukan pembayaran pinjaman ke ATM bank %1$s yg terdekat.</string>
    <string name="repayment_assistance2">Instruksi pembayaran melalui bank %1$s.</string>
    <string name="repayment_assistance3">Tidak bisa menemukan ATM %1$s？Bisa juga Anda melakukan pembayaran melalui ATM bank yg lain.</string>
    <string name="repayment_assistance4">Instruksi pembayaran melalui bank yg lain.</string>
    <string name="repayment_assistance9">Saya punya E-banking/ Mobile banking %1$s</string>
    <string name="repayment_assistance10">Panduan pembayaran melalui E-banking/ Mobile banking %1$s.</string>
    <string name="repayment_assistance11">Panduan pembayaran melalui E-banking/ Mobile banking bank yang lain.</string>
    <string name="repayment_assistance12">Saya ingin melakukan pembayaran melalui ATM</string>
    <string name="repayment_assistance13">Saya ingin melakukan pembayaran melalui E-banking/ Mobile banking</string>
    <string name="repayment_assistance14">Saya punya E-banking/ Mobile banking bank lain</string>
</resources>