<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/repayment_successful"
            android:textColor="@color/character_and_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/loss1ve" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/like_the_repayment_was_successful"
            android:textColor="@color/auxiliary"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />


        <Button
            android:id="@+id/i_see"
            style="@style/button"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="30dp"
            android:text="@string/i_see" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/maintaining_repayment_habits"
            android:textColor="@color/auxiliary"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
