<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/lingyi33" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/waiting_for_payment"
            android:textColor="@color/character_and_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/check_cancel"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/rewbbt4" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/repayment_switch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/the_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repayment_assistance1"
                    android:textColor="@color/character_and_title"
                    android:textSize="@dimen/text_size_12" />

                <RelativeLayout
                    android:id="@+id/the_bank_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/repayment_assistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/repayment_assistance2"
                        android:textColor="@color/seebkar_background_data"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/lingyi6" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/other_bank_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/other_bank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repayment_assistance3"
                        android:textColor="@color/character_and_title"
                        android:textSize="@dimen/text_size_12" />

                    <RelativeLayout
                        android:id="@+id/other_bank_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/other_bank_assistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:text="@string/repayment_assistance4"
                            android:textColor="@color/seebkar_background_data"
                            android:textSize="@dimen/text_size_12"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/lingyi6" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/repayment_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/repayment_assistance13"
                    android:textColor="@color/seebkar_background_data"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/network_repayment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/the_online_banking_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repayment_assistance9"
                    android:textColor="@color/character_and_title"
                    android:textSize="@dimen/text_size_12" />

                <RelativeLayout
                    android:id="@+id/the_online_banking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/the_online_banking_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/repayment_assistance10"
                        android:textColor="@color/seebkar_background_data"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/lingyi6" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/other_online_banking_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/repayment_assistance14"
                    android:textColor="@color/character_and_title"
                    android:textSize="@dimen/text_size_12" />

                <RelativeLayout
                    android:id="@+id/other_online_banking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/repayment_assistance11"
                        android:textColor="@color/seebkar_background_data"
                        android:textSize="@dimen/text_size_12"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/lingyi6" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/network_repayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/repayment_assistance12"
                    android:textColor="@color/seebkar_background_data"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/repayment_to_the_following_designated_account"
            android:textColor="@color/auxiliary"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/bank_logo"
                android:layout_width="80dp"
                android:layout_height="38dp"
                android:src="@mipmap/lingyi32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dynamic_virtual_card_number"
                android:textColor="@color/auxiliary"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bank_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/character_and_title"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/virtual_account_valid_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/virtual_account_valid_until"
                android:textColor="@color/auxiliary"
                android:textSize="@dimen/text_size_12" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/repayment_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/repayment_amount1"
                android:textColor="@color/auxiliary"
                android:textSize="@dimen/text_size_12" />


            <TextView
                android:id="@+id/repayment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/repayment_amount_title"
                android:paddingBottom="5dp"
                android:textColor="@color/character_and_title"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/doubt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/icon1"
                android:text="@string/the_amount_is_in_doubt"
                android:textColor="@color/content_prompt_text"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/lingyi6" />

        </LinearLayout>

        <TextView
            android:id="@+id/repayment_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/reimbursement_deadline"
            android:textColor="@color/auxiliary"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

</LinearLayout>
