<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/asad1avw2" />
-->

    <!--<com.dompet.adadadaw.view.ad.AdView-->
        <!---->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:adType="1">-->
    <!--</com.dompet.adadadaw.view.ad.AdView>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/auditing_feedback"
            android:textColor="@color/character_and_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/lingyi30" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/the_information_is_not_approved"
            android:textColor="@color/content_prompt_text"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />


        <Button
            android:id="@+id/i_see"
            style="@style/button"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="15dp"
            android:text="@string/i_see" />

    </LinearLayout>

</LinearLayout>
